# GainsTrack

./: .gitignore  CMakeLists.txt  README.md
GainsTrack/src/: main.cpp  sum.cpp
projectDesc/: preamble.tex  projectDesc.tex
